Version 1.3.18+svn:
 * language and i18n:
   * updated translations: Chinese, Czech, Danish, Filipino, French, Hungarian,
     Italian, Lithuanian, Polish, Turkish
 * miscellaneous and bug fixes:
   * Fixed chat log viewing crash after undo
   * Fixed era events loading
   * Idle, standing and selection animations are not accelerated anymore
   * All animations are disabled when the LOW_MEM compile switch is activated
   * correct FIREBALL_MISSILE not being synchronized properly. All UMC users
     need to check units using that macro

Version 1.3.18:
 * campaigns:
   * Northern Rebirth:
     * fix Sister Theta not appearing after freeing her (bug #11083)
 * language and i18n:
   * updated translations: German, Italian 
 * campaign server:
   * Strip CRs from uploaded data
 * miscellaneous and bug fixes:
   * Made unit checksum only test for important variables

Version 1.3.17:
 * campaign server:
   * added more logging
   * remembers the last maintainer upload IP
 * campaigns:
   * Liberty
     * Made the guards in Hide and Seek behave more intelligently.
   * The South Guard
     * Completely redesigned the internal workings of 6b The Long March.
 * graphics:
   * more elvish portraits
 * language and i18n:
   * updated translations: Catalan, Chinese, Danish, Esperanto, French, German,
     Italian, Japanese, Slovak, Spanish, Valencian
 * multiplayer:
   * revised maps: Caves of the Basilisk, Sablestone Delta, Silverhead Crossing
 * tutorial:
   * fixed the recall refunding/re-doing in scenario 2 (bug #10993)
   * scripting of the AI moves now check for units in target hex (prevents bug
     #6745)
   * fixed some problems with the grunt (Dumbo) dialogue
   * decorated map with new terrains
 * user interface:
   * tinygui:
     * fixed fontsize for the clock
     * removed $RACE entry when using tinygui
     * fixed replay theme in tinygui to display correctly
     * get closer to the normal theme when tinygui is active and the