@@ -523,7 +523,7 @@
             yanchor=top
         [/main_map]
 
-        #not shown/used in the editor but might eventually be activated...
+        # use a more transparent set for the borders than is used ingame
         [main_map_border]
             border_size = 0.5
             background_image = "terrain/off-map/background.png"
@@ -533,25 +533,25 @@
             # and the '.png' suffix
             tile_image = "off-map/alpha"
 
-            corner_image_top_left = "terrain/off-map/fade_corner_top_left.png"
-            corner_image_bottom_left = "terrain/off-map/fade_corner_bottom_left.png"
+            corner_image_top_left = "terrain/off-map/fade_corner_top_left_editor.png"
+            corner_image_bottom_left = "terrain/off-map/fade_corner_bottom_left_editor.png"
 
             # odd means the corner is on a tile with an odd x value,
             # the tile is the ingame tile not the odd in C++
-            corner_image_top_right_odd = "terrain/off-map/fade_corner_top_right_odd.png"
-            corner_image_top_right_even = "terrain/off-map/fade_corner_top_right_even.png"
+            corner_image_top_right_odd = "terrain/off-map/fade_corner_top_right_odd_editor.png"
+            corner_image_top_right_even = "terrain/off-map/fade_corner_top_right_even_editor.png"
 
-            corner_image_bottom_right_odd = "terrain/off-map/fade_corner_bottom_right_odd.png"
-            corner_image_bottom_right_even = "terrain/off-map/fade_corner_bottom_right_even.png"
+            corner_image_bottom_right_odd = "terrain/off-map/fade_corner_bottom_right_odd_editor.png"
+            corner_image_bottom_right_even = "terrain/off-map/fade_corner_bottom_right_even_editor.png"
 
-            border_image_left = "terrain/off-map/fade_border_left.png"
-            border_image_right = "terrain/off-map/fade_border_right.png"
+            border_image_left = "terrain/off-map/fade_border_left_editor.png"
+            border_image_right = "terrain/off-map/fade_border_right_editor.png"
 
-            border_image_top_odd = "terrain/off-map/fade_border_top_odd.png"
-            border_image_top_even = "terrain/off-map/fade_border_top_even.png"
+            border_image_top_odd = "terrain/off-map/fade_border_top_odd_editor.png"
+            border_image_top_even = "terrain/off-map/fade_border_top_even_editor.png"
 
-            border_image_bottom_odd = "terrain/off-map/fade_border_bottom_odd.png"
-            border_image_bottom_even = "terrain/off-map/fade_border_bottom_even.png"
+            border_image_bottom_odd = "terrain/off-map/fade_border_bottom_odd_editor.png"
+            border_image_bottom_even = "terrain/off-map/fade_border_bottom_even_editor.png"
         [/main_map_border]
 
         # rightside panel
