@@ -4,11 +4,15 @@ changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.3.18+svn:
   * Language and translations
-    * Updated translations: Chinese, Czech, Danish, Filipino, French, Italian,
-         Lithuanian, Polish, Turkish.
+    * Updated translations: Chinese, Czech, Danish, Filipino, French, Hungarian,
+      Italian, Lithuanian, Polish, Turkish.
+
+  * Map Editor:
+    * Activate border transitions in the editor using more translucent images
+      than used ingame.
 
   * Miscellaneous and bug fixes
-   * Idle, standing and selection animations are not accelerated anymore
+    * Idle, standing and selection animations are not accelerated anymore.
 
 
 Version 1.3.18:
